# imdb

./: CMakeLists.txt
Entities/: Actor.hpp  Director.hpp  User.hpp
connection/client/: CMakeLists.txt  Client.cpp  Client.hpp  MainClient.cpp
connection/client/application/: Application.cpp  Application.hpp  UUIDGenerator.hpp
connection/server/: CMakeLists.txt  DataManager.cpp  DataManager.hpp  MainServer.cpp  MessageInterpreter.cpp  MessageInterpreter.hpp  Server.cpp  Server.hpp  UUIDGenerator.cpp  UUIDGenerator.hpp
connection/server/databases/: Log.db
src/: main.cpp
src/Entities/: Movie.hpp  User.hpp
src/Entities/connection/: Server.cpp  Server.hpp
src/Entities/tcpClient/: main.cpp
src/Entities/tcpServer/: main.cpp
